--- a/.eslintrc
+++ b/.eslintrc
@@ -61,7 +61,7 @@
     "@typescript-eslint/explicit-function-return-type":"off",
     "max-len":["warn",{"code":80}],
     "react-hooks/rules-of-hooks":"error",
-    "react-hooks/exhaustive-deps":"warn"
-
+    "react-hooks/exhaustive-deps":"warn",
+    "jsx-a11y/anchor-is-valid": "off"
   }
 }
